--- a/mookie/templates/navbar.html
+++ b/mookie/templates/navbar.html
@@ -8,6 +8,12 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           {% if user.is_authenticated %}
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'upload_resume' %}">Upload Resume</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
           </li>
           {% else %}
