--- a/mookie/templates/home.html
+++ b/mookie/templates/home.html
@@ -25,10 +25,8 @@
   <button id="showAnalysisButton">Show Analysis</button>
   <div id="analysisResult" style="display: none;">
     <p>Best Match Percentage: <span id="percentageValue"></span></p>
-    <div id="grammarIssues" style="display: none; max-height: 200px; overflow-y: auto;">
-        <h4>Grammar Issues:</h4>
-        <!-- Grammar issues will be displayed here -->
-    </div>
+    <p>Eye Movement: <span id="eyeMovementValue"></span></p>
+    <p>Most Common Emotion: <span id="emotionValue"></span></p>
   </div>
   <img id="video" width="640" height="480" />
 
@@ -66,10 +64,8 @@
               alert(data.error);
             } else {
               console.log("Speech recognition result:", data.percentage);
-              console.log("Grammar issues:", data.grammar_issues);
               // Store the percentage for later use
               localStorage.setItem('bestMatchPercentage', data.percentage);
-              localStorage.setItem('grammarIssues', JSON.stringify(data.grammar_issues));
             }
           });
         isListening = true;
@@ -107,23 +103,22 @@
 
     showAnalysisButton.addEventListener("click", () => {
       const percentage = localStorage.getItem('bestMatchPercentage');
-      const grammarIssues = JSON.parse(localStorage.getItem('grammarIssues'));
       if (percentage) {
         percentageValueElement.innerText = `${percentage}%`;
         analysisResultElement.style.display = 'block';
-        const grammarIssuesElement = document.getElementById('grammarIssues');
-        if (grammarIssues && grammarIssues.length > 0) {
-          grammarIssuesElement.innerHTML = '<ul>' + grammarIssues.map(issue =>
-              `<li><strong>${issue.message}</strong> (Context: ${issue.context}) - Suggestions: ${issue.suggestions.join(', ')}</li>`
-          ).join('') + '</ul>';
-          grammarIssuesElement.style.display = 'block';
-        } else {
-          grammarIssuesElement.innerHTML = '<p>No grammar issues found.</p>';
-        }
       } else {
         percentageValueElement.innerText = "No analysis result found.";
         analysisResultElement.style.display = 'block';
       }
+      fetch('/video_results/')  
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('eyeMovementValue').innerText = data.eye_moved;
+        document.getElementById('emotionValue').innerText = data.most_common_emotion;
+      })
+      .catch(error => {
+        console.error('Error fetching video results:', error);
+      });
     });
 
   </script>
